@@ -1,3 +1,7 @@
+2009-03-07  Matthias Klose  <doko@ubuntu.com>
+
+	* Makefile.am (icedtea.stamp, icedtea-debug.stamp): Create target dirs.
+
 2009-03-06  Gary Benson  <gbenson@redhat.com>
 
 	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp
